unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/Brand_Form_Additional_Details__mdt.object-meta.xml
<CustomObject>
    <description>Stores the picklist values for &#39;Additional Details&#39; field</description>
    <label>Brand Form - Additional Detail</label>
    <pluralLabel>Brand Form - Additional Details</pluralLabel>
</CustomObject>