unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Long text to provide addition information.</description>
    <label>Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>