unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/Additional_Information_ECom_Single__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_ECom_Single__c</fullName>
    <description>Put the message you want displayed here specific to the Ecom or Single Brand Channel. HTML allowed for additional styling.</description>
    <inlineHelpText>Put the message you want displayed here specific to the Ecom or Single Brand Channel. HTML allowed for additional styling.</inlineHelpText>
    <label>Additional Information ECom/Single</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>