unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/Additional_Information_Retail__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Retail__c</fullName>
    <description>Put the message you want displayed here specific to the Retail Brand Channel. HTML allowed for additional styling.</description>
    <inlineHelpText>Put the message you want displayed here specific to the Retail Brand Channel. HTML allowed for additional styling.</inlineHelpText>
    <label>Additional Information Retail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>