unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/Brand_Channel__c.field-meta.xml
<CustomField>
    <fullName>Brand_Channel__c</fullName>
    <label>Brand Channel</label>
    <referenceTo>Brand_Form_Brand_Channel__mdt</referenceTo>
    <relationshipLabel>Brand Form - Additional Details</relationshipLabel>
    <relationshipName>Brand_Form_Additional_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>