unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/Help_Topics__c.field-meta.xml
<CustomField>
    <fullName>Help_Topics__c</fullName>
    <description>Associated help topic</description>
    <label>Help Topics</label>
    <referenceTo>Brand_Form_Help_Topics__mdt</referenceTo>
    <relationshipLabel>Brand Form - Additional Details</relationshipLabel>
    <relationshipName>Brand_Form_Additional_Details</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>