unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/No_Other_Retail_Channel__c.field-meta.xml
<CustomField>
    <fullName>No_Other_Retail_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this Additional Details entry will NOT display when a Other Retail Brand Channel is chosen.</description>
    <inlineHelpText>When checked, this Additional Details entry will NOT display when a Other Retail Brand Channel is chosen.</inlineHelpText>
    <label>No Other Retail Channel</label>
    <type>Checkbox</type>
</CustomField>