unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/Secondary_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Action_Type__c</fullName>
    <description>DEFLECT:  Displays message defined in &quot;Additional Information&quot; fields and the &quot;Submit&quot; button
BLOCK:  DOES NOT display message, file upload section and &quot;Submit&quot; button
SUBMIT:  Displays message defined in &quot;Additional Information&quot; fields and the &quot;Submit&quot; button</description>
    <inlineHelpText>DEFLECT:  Displays message defined in &quot;Additional Information&quot; fields and the &quot;Submit&quot; button

BLOCK:  DOES NOT display message, file upload section and &quot;Submit&quot; button

QUESTION/SUBMIT:  Displays message defined in &quot;Additional Information&quot; fields and the &quot;Submit&quot; button</inlineHelpText>
    <label>Secondary Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deflect</fullName>
                <default>true</default>
                <label>Deflect</label>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Submit</fullName>
                <label>Question/Submit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>