unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value for the picklist option</description>
    <label>Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>