unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/listViews/Calvin_Klein_ECOM.listView-meta.xml
<ListView>
    <fullName>Calvin_Klein_ECOM</fullName>
    <columns>MasterLabel</columns>
    <columns>Value__c</columns>
    <columns>Order__c</columns>
    <columns>Help_Topics__c</columns>
    <columns>Secondary_Action_Type__c</columns>
    <columns>Additional_Information_ECom_Single__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>_CK</value>
    </filters>
    <filters>
        <field>DeveloperName</field>
        <operation>notContain</operation>
        <value>_CA</value>
    </filters>
    <label>Calvin Klein - US</label>
</ListView>