unpackaged/main/default/objects/Brand_Form_Additional_Details__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Additional_Information__c</columns>
    <columns>Order__c</columns>
    <columns>Help_Topics__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>